--- a/package.json
+++ b/package.json
@@ -1,6 +1,46 @@
 {
+  "name": "descendorg",
+  "version": "1.0.0",
+  "description": "descend org",
+  "author": "Neil Pullman",
+  "private": true,
+  "scripts": {
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+  },
+  "lint-staged": {
+    "*.{js,vue}": "npm run lint",
+    "*.{css,vue}": "stylelint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "dependencies": {
+    "glsl-noise": "0.0.0",
+    "glslify": "^7.0.0",
+    "gsap": "^3.2.6",
+    "nuxt": "^2.0.0",
+    "three": "^0.116.1",
+    "three-bmfont-text": "^2.3.0"
+  },
   "devDependencies": {
-    "cssnano": "^4.1.10",
-    "sass": "^1.19.0"
+    "@nuxtjs/tailwindcss": "^1.0.0",
+    "@nuxtjs/eslint-config": "^2.0.0",
+    "@nuxtjs/eslint-module": "^1.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^6.1.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
+    "husky": "^4.0.0",
+    "lint-staged": "^10.0.0",
+    "@nuxtjs/stylelint-module": "^3.1.0",
+    "stylelint": "^10.1.0"
   }
 }
